@@ -156,6 +156,7 @@ public:
 
 protected:
     StyleSheetImpl *m_sheet;
+    bool m_loading;
     DOMString m_type;
     QString m_media;
 };
